# colourByNumbers

./: CMakeLists.txt  README.md  main.cpp  regionInfo.hpp
displayTemplate/: displayTemplate.cpp  displayTemplate.hpp
imageProcess/: imageProcess.cpp  imageProcess.hpp
